kubernetes/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/esnet: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - env:
            - name: DOWNLOADS_MAX_JOBS_PER_USER
            - name: RABBITMQ_DEFAULT_PASS
            - name: RABBITMQ_DEFAULT_USER
            - name: RABBITMQ_DEFAULT_VHOST
            - name: RABBITMQ_QUEUE
          image: rabbitmq:3-management
          name: simple2-rabbit
          ports:
            - containerPort: 15672
            - containerPort: 5672
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-data
      hostname: simple-rabbit
      restartPolicy: Always
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-data
status: {}
