kubernetes/app-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: approutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`simple.slepvalparaiso.cl`)
    kind: Rule
    services:
    - name: app
      port: 80
  tls:
    certResolver: myresolver
